Fix button overflow

--- a/programs-remote-listings/resources/frontend/rs.css
+++ b/programs-remote-listings/resources/frontend/rs.css
@@ -50,7 +50,8 @@
     cursor: pointer;
     border-radius: 5px;
     /*background-color: #fff;*/
-    border: 1px solid #e5e5e5;;
+    border: 1px solid #e5e5e5;
+    box-sizing: border-box;
 }
 .rs-register-link a:hover, #submit-registration:hover, .rs-big-button:hover {
     border-color: #333;
